feat/add tooltip & noComment if comment is empty

--- a/pkg/admin/gui/front-end/html/transfer_rules_management_page.html
+++ b/pkg/admin/gui/front-end/html/transfer_rules_management_page.html
@@ -37,14 +37,13 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <h4>1:{{ .ID }}</h4>
                 <div class="form-input">
                     <label class="col-form-label">{{ index .tab "rules" }} :</label>
                     <input type="text" name="addRuleName" class="form-control" required>
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input d-flex align-items-center">
-                    <label class="col-form-label me-3">{{ index .tab "isSend" }} :</label>
+                    <label class="col-form-label me-3">{{ index .tab "isSend" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipIsSend" }}"></i> :</label>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" name="addRuleIsSend" id="addRuleIsSend" value="true">
                     </div>
@@ -52,27 +51,27 @@
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                     <label class="col-form-label">{{ index .tab "comment" }} :</label>
-                    <input type="text" name="addRuleComment" class="form-control" required>
+                    <input type="text" name="addRuleComment" class="form-control">
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
-                    <label class="col-form-label">{{ index .tab "path" }} :</label>
-                    <input type="text" name="addRulePath" class="form-control" required>
+                    <label class="col-form-label">{{ index .tab "path" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipPath" }}"></i> :</label>
+                    <input type="text" name="addRulePath" class="form-control">
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
-                    <label class="col-form-label">{{ index .tab "localDir" }} :</label>
-                    <input type="text" name="addRuleLocalDir" class="form-control" required>
+                    <label class="col-form-label">{{ index .tab "localDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipLocalDir" }}"></i> :</label>
+                    <input type="text" name="addRuleLocalDir" class="form-control">
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
-                    <label class="col-form-label">{{ index .tab "remoteDir" }} :</label>
-                    <input type="text" name="addRuleRemoteDir" class="form-control" required>
+                    <label class="col-form-label">{{ index .tab "remoteDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipRemoteDir" }}"></i> :</label>
+                    <input type="text" name="addRuleRemoteDir" class="form-control">
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
-                    <label class="col-form-label">{{ index .tab "tmpLocalRcvDir" }} :</label>
-                    <input type="text" name="addRuleTmpLocalRcvDir" class="form-control" required>
+                    <label class="col-form-label">{{ index .tab "tmpLocalRcvDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipTmpLocalRcvDir" }}"></i> :</label>
+                    <input type="text" name="addRuleTmpLocalRcvDir" class="form-control">
                 </div>
             </div>
             <div class="modal-footer">
@@ -131,7 +130,7 @@
         <tr>
             <th></th>
             <th>{{ index .tab "rules" }}</th>
-            <th>{{ index .tab "isSend" }}</th>
+            <th>{{ index .tab "isSend" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipIsSend" }}"></i></th>
             <th>{{ index .tab "comment" }}</th>
             <th>{{ index .tab "pathConfiguration" }}</th>
             <th>{{ index .tab "tasks" }}</th>
@@ -152,14 +151,18 @@
             {{ end }}
             </td>
             <td>
-                <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#commentTypeModal_{{ .ID }}">
-                    <i class="bi bi-three-dots"></i>
-                </button>
-                <div class="modal fade" id="commentTypeModal_{{ .ID }}" tabindex="-1" aria-labelledby="commentTypeModalLabel_{{ .ID }}" aria-hidden="true">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <div class="modal-body text-break">
-                                {{ .Comment }}
+              <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#commentTypeModal_{{ .ID }}">
+                <i class="bi bi-three-dots"></i>
+              </button>
+              <div class="modal fade" id="commentTypeModal_{{ .ID }}" tabindex="-1" aria-labelledby="commentTypeModalLabel_{{ .ID }}" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-body text-break">
+                      {{ if .Comment }}
+                        {{ .Comment }}
+                      {{ else }}
+                        {{ index $.tab "noComment" }}
+                      {{ end }}
                             </div>
                         </div>
                     </div>
@@ -180,22 +183,22 @@
                     </div>
                     <div class="modal-body">
                       <div class="form-input mb-2">
-                        <label class="col-form-label">{{ index $.tab "path" }} :</label>
+                        <label class="col-form-label">{{ index $.tab "path" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPath" }}"></i> :</label>
                         <input type="text" class="form-control-plaintext" value="{{ .Path }}" readonly>
                       </div>
                       <hr style="border-top: 1px solid #ababab;">
                       <div class="form-input mb-2">
-                        <label class="col-form-label">{{ index $.tab "localDir" }} :</label>
+                        <label class="col-form-label">{{ index $.tab "localDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipLocalDir" }}"></i> :</label>
                         <input type="text" class="form-control-plaintext" value="{{ .LocalDir }}" readonly>
                       </div>
                       <hr style="border-top: 1px solid #ababab;">
                       <div class="form-input mb-2">
-                        <label class="col-form-label">{{ index $.tab "remoteDir" }} :</label>
+                        <label class="col-form-label">{{ index $.tab "remoteDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipRemoteDir" }}"></i> :</label>
                         <input type="text" class="form-control-plaintext" value="{{ .RemoteDir }}" readonly>
                       </div>
                       <hr style="border-top: 1px solid #ababab;">
                       <div class="form-input mb-2">
-                        <label class="col-form-label">{{ index $.tab "tmpLocalRcvDir" }} :</label>
+                        <label class="col-form-label">{{ index $.tab "tmpLocalRcvDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipTmpLocalRcvDir" }}"></i> :</label>
                         <input type="text" class="form-control-plaintext" value="{{ .TmpLocalRcvDir }}" readonly>
                       </div>
                     </div>
@@ -231,39 +234,41 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <div class="form-input mb-3">
+                            <div class="form-input">
                                 <label class="col-form-label">{{ index $.tab "rules" }} :</label>
                                 <input type="text" name="editRuleName" class="form-control" required value="{{ .Name }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
-                            <div class="form-input mb-3">
-                                <label class="col-form-label">{{ index $.tab "isSend" }} :</label>
-                                <input type="text" name="editRuleIsSend" class="form-control" required value="{{ .IsSend }}">
+                            <div class="form-input d-flex align-items-center">
+                                <label class="col-form-label me-3">{{ index $.tab "isSend" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipIsSend" }}"></i> :</label>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="checkbox" name="editRuleIsSend" id="editRuleIsSend" value="true" {{ if .IsSend }}checked{{ end }}>
+                                </div>
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
-                            <div class="form-input mb-3">
+                            <div class="form-input">
                                 <label class="col-form-label">{{ index $.tab "comment" }} :</label>
                                 <input type="text" name="editRuleComment" class="form-control" value="{{ .Comment }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
-                            <div class="form-input mb-3">
-                                <label class="col-form-label">{{ index $.tab "path" }} :</label>
-                                <input type="text" name="editRulePath" class="form-control" required value="{{ .Path }}">
+                            <div class="form-input">
+                                <label class="col-form-label">{{ index $.tab "path" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPath" }}"></i> :</label>
+                                <input type="text" name="editRulePath" class="form-control" value="{{ .Path }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
-                            <div class="form-input mb-3">
-                                <label class="col-form-label">{{ index $.tab "localDir" }} :</label>
-                                <input type="text" name="editRuleLocalDir" class="form-control" required value="{{ .LocalDir }}">
+                            <div class="form-input">
+                                <label class="col-form-label">{{ index $.tab "localDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipLocalDir" }}"></i> :</label>
+                                <input type="text" name="editRuleLocalDir" class="form-control" value="{{ .LocalDir }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
-                            <div class="form-input mb-3">
-                                <label class="col-form-label">{{ index $.tab "remoteDir" }} :</label>
-                                <input type="text" name="editRuleRemoteDir" class="form-control" required value="{{ .RemoteDir }}">
+                            <div class="form-input">
+                                <label class="col-form-label">{{ index $.tab "remoteDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipRemoteDir" }}"></i> :</label>
+                                <input type="text" name="editRuleRemoteDir" class="form-control" value="{{ .RemoteDir }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
-                            <div class="form-input mb-3">
-                                <label class="col-form-label">{{ index $.tab "tmpLocalRcvDir" }} :</label>
-                                <input type="text" name="editRuleTmpLocalRcvDir" class="form-control" required value="{{ .TmpLocalRcvDir }}">
+                            <div class="form-input">
+                                <label class="col-form-label">{{ index $.tab "tmpLocalRcvDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipTmpLocalRcvDir" }}"></i> :</label>
+                                <input type="text" name="editRuleTmpLocalRcvDir" class="form-control" value="{{ .TmpLocalRcvDir }}">
                             </div>
                         </div>
                         <div class="modal-footer">
