--- a/pkg/admin/gui/front-end/html/transfer_rules_management_page.html
+++ b/pkg/admin/gui/front-end/html/transfer_rules_management_page.html
@@ -215,9 +215,9 @@
               </a>
             </td>
             <td>
-              <button class="btn btn-outline-primary modal-btn" type="button" href="management_usage_rights_rules" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipUsageRights" }}">
+              <a class="btn btn-outline-primary modal-btn" href="management_usage_rights_rules?ruleID={{ .ID }}" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipUsageRights" }}">
                 <i class="bi bi-shield-check"></i>
-              </button>
+              </a>
             </td>
             <td class="text-end">
                 {{ if contains $.myPermission.Rules "w" }}
