--- a/pkg/admin/gui/front-end/html/home_page.html
+++ b/pkg/admin/gui/front-end/html/home_page.html
@@ -29,6 +29,14 @@
     <div class="col-sm-4">
       <a href="partner_management" class="text-decoration-none text-dark">
         <div class="card text-center p-3">
+          <i class="bi bi-people-fill fs-2"></i>
+          <div>{{ index .tab "local_client_management" }}</div>
+        </div>
+      </a>
+    </div>
+    <div class="col-sm-4">
+      <a href="partner_management" class="text-decoration-none text-dark">
+        <div class="SignMethodscard text-center p-3">
           <i class="bi bi-person-check-fill fs-2"></i>
           <div>{{ index .tab "remote_partner_management" }}</div>
         </div>
