--- a/pkg/admin/gui/front-end/html/addTasks.html
+++ b/pkg/admin/gui/front-end/html/addTasks.html
@@ -150,13 +150,8 @@
         <label class="col-form-label">{{ index .tab "info" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipInfo" }}"></i> :</label>
        <div id="infoTransferContainer">
            <div class="input-group mb-2">
-               <input type="text"
-                      name="infoTransfer[]"
-                      class="form-control"
-                      placeholder="{{ index .tab "info" }}">
-               <button type="button"
-                       class="btn btn-outline-danger btn-sm"
-                       onclick="removeField(this)">
+               <input type="text" name="infoTransfer[]" class="form-control" placeholder="{{ index .tab "info" }}">
+               <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
                    <i class="bi bi-trash"></i>
                </button>
            </div>
@@ -215,12 +210,15 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "outputPath" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipOutputPath" }}"></i> :</label>
-        <select name="outputPathArchive" id="outputPathArchive" class="form-select">
-            <option value="" disabled selected>{{ index .tab "selectOutputPath" }}</option>
+        <div class="input-group">
+        <input type="text" name="outputPathArchiveName" class="form-control">
+        <select name="outputPathArchiveExt" id="outputPathArchiveExt" class="form-select" style="max-width: 20%;">
+            <option value="" disabled selected>{{ index .tab "extensions" }}</option>
             {{ range .ArchiveExtensions }}
                 <option value="{{ . }}">{{ . }}</option>
             {{ end }}
         </select>
+        </div>
     </div>
 </div>
 {{ end }}
@@ -229,13 +227,16 @@
 <div id="taskEXTRACT" class="taskBlock" style="display:none;">
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
-        <label class="col-form-label">{{ index .tab "archive" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipArchive" }}"></i> :</label>
-        <select name="archiveExtract" id="archiveExtract" class="form-select">
-            <option value="" disabled selected>{{ index .tab "selectArchive" }}</option>
+         <label class="col-form-label">{{ index .tab "archive" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipArchive" }}"></i> :</label>
+        <div class="input-group">
+        <input type="text" name="archiveExtractName" class="form-control">
+        <select name="archiveExtractExt" id="archiveExtractExt" class="form-select" style="max-width: 20%;">
+            <option value="" disabled selected>{{ index .tab "extensions" }}</option>
             {{ range .ArchiveExtensions }}
-            <option value="{{ . }}">{{ . }}</option>
+                <option value="{{ . }}">{{ . }}</option>
             {{ end }}
         </select>
+        </div>
     </div>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
@@ -253,9 +254,18 @@
         <input type="text" name="uploadURLIcap" class="form-control">
     </div>
     <hr style="border-top: 1px solid #ababab;">
-    <div class="form-input">
-        <label class="col-form-label">{{ index .tab "timeout" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipTimeout" }}"></i> :</label>
-        <input type="text" name="timeoutIcap" class="form-control">
+    <div class="form-input d-flex align-items-center">
+        <label class="col-form-label me-3">{{ index .tab "timeout" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipTimeout" }}"></i> :</label>
+        <div class="input-group" style="max-width: 60%;">
+            <span class="input-group-text">h</span>
+            <input type="text" name="timeoutIcapH" class="form-control" placeholder="00">
+            <span class="input-group-text">m</span>
+            <input type="text" name="timeoutIcapM" class="form-control" placeholder="00">
+            <span class="input-group-text">s</span>
+            <input type="text" name="timeoutIcapS" class="form-control" placeholder="00">
+            <span class="input-group-text">ms</span>
+            <input type="text" name="timeoutIcapMS" class="form-control" placeholder="00">
+        </div>
     </div>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input d-flex align-items-center">
@@ -335,7 +345,7 @@
         <label class="col-form-label">{{ index .tab "method" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMethodDecrypt" }}"></i> :</label>
         <select name="methodDecrypt" id="methodDecrypt" class="form-select">
             <option value="" disabled selected>{{ index .tab "selectMethod" }}</option>
-            {{ range .EncryptMethods }}
+            {{ range .DecryptMethods }}
             <option value="{{ . }}">{{ . }}</option>
             {{ end }}
         </select>
@@ -385,7 +395,7 @@
         <label class="col-form-label">{{ index .tab "method" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMethodVerify" }}"></i> :</label>
         <select name="methodVerify" id="methodVerify" class="form-select">
             <option value="" disabled selected>{{ index .tab "selectMethodVerify" }}</option>
-            {{ range .SignMethods }}
+            {{ range .VerifyMethods }}
             <option value="{{ . }}">{{ . }}</option>
             {{ end }}
         </select>
